# compression-research-experiments

./: .gitignore  README.md
BlockMGARD/: README.md
BlockMGARD/io_bench/: CMakeLists.txt  README.md  adios_io_bench.cpp  build.sh
BlockMGARD/roi_generator/: ROIGenerator.cpp
BlockMGARD/scripts/: compression_repro.sh  cuszp_comp_repro.sh  hybridhierarchy_repro.sh  incacheblock_repro.sh  install_baselines.sh  io_repro.sbatch  roi_cr_repro.sh  roi_experiments.sh  roi_repro.sh  scaling_repro.sbatch  zfp_comp_repro.sh
